# lab09

./: CMakeLists.txt  CPackConfig.cmake  Dockerfile  LICENSE
.github/workflows/: action.yml
_build/: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
_build/_CPack_Packages/Linux/RPM/: rpmbuildprint-devel.err
_build/_CPack_Packages/Linux/RPM/SPECS/: print-devel.spec
artifacts/: screenshot.txt
demo/: main.cpp
sources/: main.cpp
